fix: layout shift when navigating header links

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 /* --- Typographic Scale & Spacing --- */
 
 h1,
